--- a/index.html
+++ b/index.html
@@ -379,52 +379,15 @@ i also love to work on building games assets, games are fun and the ideas behind
         </div>
         <div class="divider-custom-line"></div>
       </div>
+      <div class="text-center">
+        <a class="btn btn-outline-secondary btn-lg" role="button" href="mailto:b.koukin@gmail.com?subject=Portfolio">Contact Me</a>
 
-      <!-- Contact Section Form -->
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate" >
-            <div class="control-group" >
-              <div class="form-group floating-label-form-group controls mb-0 pb-2" style="color:#F5F6F7">
-                <label>Name</label>
-                <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." style="color: #F5F6F7;">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Email Address</label>
-                <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address." style="color: #F5F6F7;">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Project type</label>
-                <input class="form-control" id="projectType" type="tel" placeholder="Project type" required="required" data-validation-required-message="Please enter Project type."style="color: #F5F6F7;">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Project description</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message." style="color: #F5F6F7;"></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-            </div>
-          </form>
-        </div>
+
       </div>
 
-    </div>
-  </section>
-
+      <!-- Contact Section Form -->
+</div>
+</section>
   <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
