--- a/index.html
+++ b/index.html
@@ -392,9 +392,6 @@ i also love to work on building games assets, games are fun and the ideas behind
   <footer class="footer text-center">
     <div class="container">
       <div class="row">
-
-
-
   </div>
   <!-- Footer Social Icons -->
   <div class="col-lg-4 mb-5 mb-lg-0 container">
@@ -412,8 +409,8 @@ i also love to work on building games assets, games are fun and the ideas behind
       <i class="fab fa-fw fa-dribbble"></i>
     </a>
   </div>
-          <div class="container">
-            <small> &copy; Powered By Art</small>
+          <div class="container" style="font-size:15px; margin-top:30px;">
+            <small >Proudly Hosted By <a href="https://github.com" style="margin-left:5px;"><i class="fab fa-github"></i></a> </small>
           </div>
 
 
