--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
       <!-- About Section Content -->
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
-          <p class="lead ">26YEARS OLD, GRAPHIC DESIGNER BASED IN MOROCCO.
+          <p class="lead ">29YEARS OLD, GRAPHIC DESIGNER BASED IN MOROCCO.
 Digital art is my way to express my self, i work mostly on logo & branding design project. But am always open for new challenging project.
 i also love to work on building games assets, games are fun and the ideas behind every game makes designing the right assets an amazing challenge.
 </p>
@@ -580,7 +580,7 @@ i also love to work on building games assets, games are fun and the ideas behind
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/EAlogo.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Eureka Adventures is concept for a traveling company , the demand was for the logo to be as simple as it possible with no more than two colors. i managed to achieve that by manupilating the two letters "E" and "A" so they form a mountain sense they are specialised in mountain climbing.  </p>
+                <p class="mb-5">Eureka Adventures is concept for a traveling company , the demand was for the logo to be as simple as it possible with no more than two colors. i managed to achieve that by manupilating the two letters "E" and "A" so they form a mountain since they are specialised in mountain climbing.  </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -811,7 +811,7 @@ i also love to work on building games assets, games are fun and the ideas behind
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/LKlogo.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Lion King : in this conception sense my client was very claire about his needs for a lion in the logo, i used a lion's head and a crown for this outcome</p>
+                <p class="mb-5">Lion King : in this conception since my client was very claire about his needs for a lion in the logo, i used a lion's head and a crown for this outcome</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -927,7 +927,7 @@ i also love to work on building games assets, games are fun and the ideas behind
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/PElogo.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Protect Engine : for this logo i used a gear sense it's the most important part of the engine. this will have a good impact on the image of the company.   </p>
+                <p class="mb-5">Protect Engine : for this logo i used a gear since it's the most important part of the engine. this will have a good impact on the image of the company.   </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
